3.0.1
======
14. Implementation of system monitoring action and published as system action
13. Adapt engine to Remedy 9 (API and respective modules)
12. Redesign project configuration management
11. Optimize and adapt logging channels to the startup mode and disable default console logging for JDK
10. Implement plugin or client mode startup using a direct and simplified configuration file
09. Redevelop SupportGroupAdministration action
07. Redevelop KeypassAdministration action
06. Develop startup process using JAR library
05. Merge in base package AAR and SSO modules
04. Update file.wrapper action
03. Implement SupportGroupMigration action
02. Export help documents in plain text and wiki (md) and html formats
01. Design and implement new help model


3.0
======
03. Develop new action DEV area to set/associate forms for workflow objects
02. Aggregate parser, common, boot, runtime, aar and sso libraries into one single file
01. Public distribution over GitHub and under GNU license distribution


2.2
======
03. Update runtime cron engine
02. Implementation fo sysmon action
01. Environment: Build new distribution using 8.1 ARSystem libraries

2.1
======
27. Environment: Testing environment has been designed and implemented as general Ant targets and specific property file that
	will includes test parametrization. The testing environment is fully functional on both Unix/Linux and Windows and could
	be used in case of ANT_HOME, AREASY_HOME and JAVA_HOME are defined.
26. Unix/Linux installer has been update to recognize the configuration already set in the previous installation. All these
	configuration values will be provided as default values during installation process. Also the installer is able to update
	user profile variables
25. Environment: Deployment (local and remote) procedures have been improved and now the configuration management targets are