@@ -1,3 +1,4 @@
 *.ipr
 *.iml
 *.iws
+.svn
